fixing blur issue on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -244,7 +244,8 @@ header{
         width: 100%;
         height: 0;
         background: rgba(0, 0, 0, .1);
-        backdrop-filter: blur(50px);
+        -webkit-backdrop-filter: blur(50px)!important;
+        backdrop-filter: blur(50px)!important;
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
         overflow: hidden;
         transition: .3s ease;
